--- a/.github/workflows/Lienol-openwrt.yml
+++ b/.github/workflows/Lienol-openwrt.yml
@@ -23,8 +23,8 @@ on:
     #- cron: 0 3 * * *
 
 env:
-  REPO_URL: https://github.com/coolsnowwolf/lede
-  REPO_BRANCH: master
+  REPO_URL: https://github.com/Lienol/openwrt
+  REPO_BRANCH: 22.03
   FEEDS_CONF: feeds.conf.default
   CONFIG_FILE: ceshi.config
   DIY_P1_SH: diy-part1.sh
@@ -33,8 +33,8 @@ env:
   UPLOAD_FIRMWARE: false
   UPLOAD_RELEASE: true
   TZ: Asia/Shanghai
-  FILE_NAME: ARMv8_Lede
-  PRODUCT_NAME: ARMv8_Lede
+  FILE_NAME: ARMv8_Lienol
+  PRODUCT_NAME: ARMv8_Lienol
 
 jobs:
   build:
@@ -181,7 +181,7 @@ jobs:
         commit: main
         token: ${{ secrets.RELEASES_TOKEN }}
         body: |
-          默认IP：192.168.1.10 默认密码：password
+          默认IP：192.168.2.10 默认密码：password
           当前使用版本:【编译前的最后一次[➦主源码](https://github.com/coolsnowwolf/lede)更新记录】
           ${{ env.useVersionInfo }}
         artifacts: ${{ env.FIRMWARE }}/*
