--- a/Immortalwrt.config
+++ b/Immortalwrt.config
@@ -41,6 +41,7 @@ CONFIG_PACKAGE_badblocks=y
 CONFIG_PACKAGE_btrfs-progs=y
 CONFIG_BTRFS_PROGS_ZSTD=y
 CONFIG_PACKAGE_chattr=y
+CONFIG_PACKAGE_coremark=y
 # CONFIG_PACKAGE_debugfs is not set
 # CONFIG_PACKAGE_dnsproxy is not set
 CONFIG_PACKAGE_dosfstools=y
