--- a/.github/workflows/ARMv8_Immortalwrt.yml
+++ b/.github/workflows/ARMv8_Immortalwrt.yml
@@ -12,7 +12,7 @@ on:
 env:
   REPO_URL: https://github.com/0118Add/immortalwrt
   REPO_BRANCH: openwrt-21.02
-  FEEDS_CONF: feeds.conf.default
+  FEEDS_CONF: aarch64/feeds.conf.default
   CONFIG_FILE: Immortalwrt.config
   DIY_P1_SH: diy-part1.sh
   DIY_P2_SH: diy-part2.sh
